--- a/package.json
+++ b/package.json
@@ -3,16 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "7.14.6",
+    "@styled-icons/boxicons-regular": "10.23.0",
+    "@styled-icons/foundation": "10.28.0",
+    "@styled-icons/material": "10.28.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@tippyjs/react": "4.2.5",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.15",
+    "@udecode/plate": "^7.0.3",
+    "@udecode/plate-excalidraw": "7.0.2",
+    "@udecode/plate-test-utils": "3.2.0",
+    "babel-plugin-macros": "3.1.0",
+    "babel-plugin-styled-components": "1.10.5",
+    "babel-plugin-twin": "1.0.2",
+    "faker": "4.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-katex": "^2.0.2",
+    "react-latex": "^2.0.0",
     "react-scripts": "4.0.3",
+    "slate": "^0.70.0",
+    "slate-history": "^0.66.0",
+    "slate-hyperscript": "^0.67.0",
+    "slate-react": "^0.70.1",
+    "styled-components": "^5.3.3",
+    "tailwindcss": "2.2.4",
+    "twin.macro": "2.6.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -39,5 +61,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/faker": "^5.5.9"
   }
 }
